better loggedin/loggedout status detection in UI

--- a/attachments/pages/index.html
+++ b/attachments/pages/index.html
@@ -175,13 +175,15 @@
   <script class="streamTemplate" type="text/mustache">
     <div class="wrapper">
       <div class="stream">
-        <div class="top_bar">
-          <img id="couchLogo" src="images/fancycouch-small.png">
-          <span class="project-title">DataCouch</span>
-          <span class="separator"> — </span>
-          <span class="lightest_gray">collaborative data</span>
-          <div class="userControls"></div>
-        </div>
+        <a href="#/">
+          <div class="top_bar">
+            <img id="couchLogo" src="images/fancycouch-small.png">
+            <span class="project-title">DataCouch</span>
+            <span class="separator"> — </span>
+            <span class="lightest_gray">collaborative data</span>
+            <div class="userControls"></div>
+          </div>
+        </a>
         <div class="showbar" id="showbar">
           <div class="userButtons"></div>
         </div>
