add fork message

--- a/attachments/pages/recline.html
+++ b/attachments/pages/recline.html
@@ -86,7 +86,7 @@
   </script>
 
   <script type='text/mustache' class="signInTemplate">
-    <a id="logged-in-status" href="#/login!" class="secondary"><img src="/images/sign-in-with-twitter.png"></a>
+    <a id="logged-in-status" href="#/login!" class="secondary">Want to fork this dataset? <img src="/images/sign-in-with-twitter.png"></a>
   </script>
   
   <script type='text/mustache' class="signOutTemplate">
