--- a/attachments/pages/recline.html
+++ b/attachments/pages/recline.html
@@ -11,6 +11,10 @@
   <link rel="stylesheet" href="/style/iconic.css" media="screen">
   <link rel="stylesheet" href="/style/codemirror.css">
   <link rel="stylesheet" href="/style/codemirror-default.css">
+  
+  <script src="/wiki/socket.io/socket.io.js"></script>  
+  <script src="/wiki/share/share.js"></script>  
+  <script src="/wiki/share/textarea.js"></script>  
   <script type="text/javascript" src="/script/deps-min.js"></script>  
   <script type="text/javascript" src="/script/util.js"></script>
   <script type="text/javascript" src="/script/costco.js"></script>
@@ -140,7 +144,7 @@
       <ul class="ui-tabs-nav ui-helper-reset ui-helper-clearfix ui-widget-header">
         <li class="ui-state-default ui-corner-top"><a data-tab="data" href="javascript:{}">Data</a></li>
         <li class="ui-state-default ui-corner-top"><a data-tab="apps" href="javascript:{}">Applications</a></li>
-        <!-- <li class="ui-state-default ui-corner-top"><a data-tab="history" href="javascript:{}">History</a></li>-->
+        <li class="ui-state-default ui-corner-top"><a data-tab="wiki" href="javascript:{}">Wiki</a></li>
       </ul>
     </div>
     <div class="sidebar">
@@ -178,6 +182,20 @@
         </div>
       {{/properties}}
       <div class="tweetsContainer"></div>
+    </div>
+  </script>
+  
+  <script type='text/mustache' class="wikiTabTemplate">
+    <div class="top">
+      <div class="title">Collaborative Notepad</div>
+      <div class="timestamp">
+        {{#loggedIn}}Anyone can edit. Synchronized as you type{{/loggedIn}}
+        {{^loggedIn}}Log in to edit{{/loggedIn}}
+      </div>
+    </div>
+    <div class="bottom">
+      {{#loggedIn}}<textarea id="editor" disabled>Loading...</textarea>{{/loggedIn}}
+      {{^loggedIn}}<div id="editor" disabled>Loading...</div>{{/loggedIn}}
     </div>
   </script>
   
