--- a/attachments/pages/recline.html
+++ b/attachments/pages/recline.html
@@ -12,9 +12,9 @@
   <link rel="stylesheet" href="/style/codemirror.css">
   <link rel="stylesheet" href="/style/codemirror-default.css">
   
-  <script src="/wiki/socket.io/socket.io.js"></script>  
-  <script src="/wiki/share/share.js"></script>  
-  <script src="/wiki/share/textarea.js"></script>  
+  <script src="/proxy/wiki/socket.io/socket.io.js"></script>  
+  <script src="/proxy/wiki/share/share.js"></script>  
+  <script src="/proxy/wiki/share/textarea.js"></script>  
   <script type="text/javascript" src="/script/deps-min.js"></script>  
   <script type="text/javascript" src="/script/util.js"></script>
   <script type="text/javascript" src="/script/costco.js"></script>
