add noun picker to edit page too

--- a/attachments/pages/recline.html
+++ b/attachments/pages/recline.html
@@ -169,7 +169,7 @@
     </div>
     <div class="bottom">
       {{#hasNouns}}
-        <div class="nounContainer">
+        <div class="datasetNoun">
           {{#nouns}}
             <a href="http://thenounproject.com/noun/{{noun}}/">{{{svg}}}</a>
           {{/nouns}}
@@ -236,15 +236,39 @@
                 <textarea class="xlarge" id="description" name="description" rows="3">{{description}}</textarea>
               </div>
             </div>
+            <div class="clearfix">
+              <label for="icon">
+                Icon
+              </label>
+              <div class="input">
+                <div class="input-prepend">
+                  <span class="add-on"><span class="magnifier icon"></span></span>
+                  <input class="medium" id="icon-picker" size="16" type="text">
+                </div>
+                <span class="help-block">
+                  Pick one icon from the <a href="http://thenounproject.com">Noun Project</a> that represents this dataset.
+                </span>
+              </div>
+              <div class="nounContainer"></div>
+            </div>
           </fieldset>
         </form>
-        <div class="nounContainer"></div>
       </div>
       <div class="modal-footer">
         <input type="submit" class="btn primary ok" value="Update">
         <a href="#/cancel!" class="btn secondary cancel">Cancel</a>
       </div>
     </div>
+  </script>
+  
+  <script type="text/mustache" class="nounsTemplate">
+    <div class="nounsBoundary">
+      {{#nouns}}
+        <div class="nounWrapper">
+          <div class="noun-icon">{{{svg}}}</div>
+          <span class="icon-subtitle">{{noun}}</span>
+        </div>
+      {{/nouns}}
   </script>
   
   <script type='text/mustache' class="tweetStreamTemplate">
