--- a/attachments/pages/recline.html
+++ b/attachments/pages/recline.html
@@ -128,6 +128,7 @@
   
   <script type='text/mustache' class="transformActionsTemplate">
     <li><a data-action="wipe" class="menuAction" href="JavaScript:void(0);">Delete all docs</a></li>
+    <li><a data-action="destroy" class="menuAction" href="JavaScript:void(0);">Delete dataset</a></li>
   </script>
   
   <script type='text/mustache' class="columnActionsTemplate">
