add show all rows button

--- a/attachments/pages/recline.html
+++ b/attachments/pages/recline.html
@@ -352,6 +352,7 @@
           <a href="javascript:{}" class="viewPanel-pagingControls-page selected">10</a>
           <a href="javascript:{}" class="viewPanel-pagingControls-page action">25</a>
           <a href="javascript:{}" class="viewPanel-pagingControls-page action">50</a>
+          <a href="javascript:{}" class="viewPanel-pagingControls-page action show-all">all</a>
           <span>
             rows
           </span>
