add a buncha built in functions

--- a/attachments/pages/recline.html
+++ b/attachments/pages/recline.html
@@ -135,6 +135,10 @@
     <li><a data-action="bulkEdit" class="menuAction" href="JavaScript:void(0);">Transform...</a></li>
     <li><a data-action="renameColumn" class="menuAction" href="JavaScript:void(0);">Rename this column</a></li>
     <li><a data-action="deleteColumn" class="menuAction" href="JavaScript:void(0);">Delete this column</a></li>
+    <li><a data-action="titlecase" class="menuAction" href="JavaScript:void(0);">To titlecase</a></li>
+    <li><a data-action="uppercase" class="menuAction" href="JavaScript:void(0);">To uppercase</a></li>
+    <li><a data-action="lowercase" class="menuAction" href="JavaScript:void(0);">To lowercase</a></li>
+    <li><a data-action="geocode" class="menuAction" href="JavaScript:void(0);">Geocode</a></li>
   </script>
 
   <script type='text/mustache' class="rowActionsTemplate">
