--- a/attachments/pages/recline.html
+++ b/attachments/pages/recline.html
@@ -21,6 +21,8 @@
   <script type="text/javascript" src="/script/recline.js"></script>
   <script type="text/javascript" src="/script/monocles.js"></script>
   <script type="text/javascript" src="/script/edit.js"></script>
+  <script type='text/javascript' src='http://maps.google.com/maps/api/js?sensor=true'></script>
+  
 </head> 
 <body class="bod">
   <div class="reclineContainer">
