make noun project links open in a new window

--- a/attachments/pages/recline.html
+++ b/attachments/pages/recline.html
@@ -254,7 +254,7 @@
                   <input class="medium" id="icon-picker" size="16" type="text">
                 </div>
                 <span class="help-block">
-                  Pick one icon from the <a href="http://thenounproject.com">Noun Project</a> that represents this dataset.
+                  Pick one icon from the <a href="http://thenounproject.com" target="_blank">Noun Project</a> that represents this dataset.
                 </span>
               </div>
               <div class="nounContainer"></div>
