--- a/attachments/pages/index.html
+++ b/attachments/pages/index.html
@@ -207,6 +207,7 @@
           <div class="row">
             <div class="infoContainer"></div>
             <div class="span16 datasetsContainer"></div>
+            <div class="span16 stream-loading hidden"><div class="spinner"></div></div>
           </div>
         </div>
       </div>
@@ -359,97 +360,99 @@
     </div>
   </script>
   
-  <script type="text/mustache" class="datasetsTemplate">
+  <script type="text/mustache" class="datasetsListTemplate">
     <div class="ornament-hr"></div>
-    
-    <ol class="datasets detailed">
-      <div xmlns="http://www.w3.org/1999/xhtml" id="column-wrapper">
-        {{#datasets}}
-          <div class="column-main">
-            {{#nouns}}
-              <div class="icon big">
-                <a href="http://thenounproject.com/noun/{{noun}}/">{{{svg}}}</a>
-              </div>
-            {{/nouns}}
-            {{^nouns}}
-              <div xmlns="http://www.w3.org/1999/xhtml" class="icon big">
-                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                version="1.0" id="Layer_1" x="0px" y="0px" width="70px" height="70px" viewBox="0 0 100 90.682"
-                enable-background="new 0 0 100 90.682" xml:space="preserve" xmlns:xml="http://www.w3.org/XML/1998/namespace">
-                  <path d="M8.769,18.373v43.646h-6.53C1.004,62.019,0,61.024,0,59.78V3.459C0,1.554,1.42,0,3.372,0h28.857  c1.944,0,3.372,1.546,3.372,3.452v3.308h44.617c1.241,0,2.238,1.001,2.238,2.231v12.666H44.37v-3.315  c0-1.901-1.42-3.451-3.379-3.451H12.147C10.188,14.89,8.769,16.461,8.769,18.373z"
-                  />
-                  <path d="M97.761,35.426H53.146v-3.308c0-1.905-1.429-3.452-3.381-3.452H20.914c-1.95,0-3.371,1.554-3.371,3.458V88.45  c0,1.237,0.997,2.231,2.239,2.231h6.527h71.451c1.241,0,2.239-0.994,2.239-2.231V37.657C100,36.427,99.002,35.426,97.761,35.426z"
-                  />
-                </svg>
-              </div>
-            {{/nouns}}
-          </div>
-          <div class="column-side">
-            <aside id="info-box" class="info-table-wrapper">
-              <div class="avatar"><a href="#/{{user}}"><img src="{{#avatar}}{{avatar}}{{/avatar}}{{^avatar}}images/avatar_default.png{{/avatar}}"></a></div>
-              <h4>
-                <a class="owner" href="#/{{user}}">{{user}}</a>&nbsp;/ <a class="dataset" href="edit/#/{{id}}">{{name}}</a>
-              </h4>
-              <div class="ich_tmpl">
-                <table xmlns="http://www.w3.org/1999/xhtml">
-                  <tbody>
-                    {{#forkedFrom}}
-                      <tr>
-                        <td>
-                          <span class="fork icon"></span>
-                          Fork of
-                        </td>
-                        <td>
-                          <a href="#/{{forkedFromUser}}">{{forkedFromUser}}</a>&nbsp;/ <a class="dataset" href="/edit/#/{{forkedFrom}}">{{name}}</a>
-                        </td>
-                      </tr>
-                    {{/forkedFrom}}
-                    {{#description}}
-                      <tr>
-                        <td>
-                          Description
-                        </td>
-                        <td>
-                          {{description}}
-                        </td>
-                      </tr>
-                    {{/description}}
-                    <tr>
-                      <td>
-                        Created
-                      </td>
-                      <td>
-                        <span class="timeago" title="{{date}}"></span>
-                      </td>
-                    </tr>
-                    {{#count}}
-                       <tr>
-                        <td>
-                          Documents
-                        </td>
-                        <td>
-                          {{count}}
-                        </td>
-                      </tr>
-                    {{/count}}
-                    {{#size}}
-                       <tr>
-                        <td>
-                          Size
-                        </td>
-                        <td>
-                          {{size}}
-                        </td>
-                      </tr>
-                    {{/size}}
-                  </tbody>
-                </table>
-              </div>
-            </aside>
-          </div>
-        {{/datasets}}
+    <ol class="datasets detailed" data-name="{{name}}">
+      <div xmlns="http://www.w3.org/1999/xhtml" id="column-wrapper" class="datasets-wrapper">
       </div>
     </ol>
+  </script>
+  
+  <script type="text/mustache" class="datasetsTemplate">
+    {{#datasets}}
+      <div class="column-main">
+        {{#nouns}}
+          <div class="icon big">
+            <a href="http://thenounproject.com/noun/{{noun}}/">{{{svg}}}</a>
+          </div>
+        {{/nouns}}
+        {{^nouns}}
+          <div xmlns="http://www.w3.org/1999/xhtml" class="icon big">
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+            version="1.0" id="Layer_1" x="0px" y="0px" width="70px" height="70px" viewBox="0 0 100 90.682"
+            enable-background="new 0 0 100 90.682" xml:space="preserve" xmlns:xml="http://www.w3.org/XML/1998/namespace">
+              <path d="M8.769,18.373v43.646h-6.53C1.004,62.019,0,61.024,0,59.78V3.459C0,1.554,1.42,0,3.372,0h28.857  c1.944,0,3.372,1.546,3.372,3.452v3.308h44.617c1.241,0,2.238,1.001,2.238,2.231v12.666H44.37v-3.315  c0-1.901-1.42-3.451-3.379-3.451H12.147C10.188,14.89,8.769,16.461,8.769,18.373z"
+              />
+              <path d="M97.761,35.426H53.146v-3.308c0-1.905-1.429-3.452-3.381-3.452H20.914c-1.95,0-3.371,1.554-3.371,3.458V88.45  c0,1.237,0.997,2.231,2.239,2.231h6.527h71.451c1.241,0,2.239-0.994,2.239-2.231V37.657C100,36.427,99.002,35.426,97.761,35.426z"
+              />
+            </svg>
+          </div>
+        {{/nouns}}
+      </div>
+      <div class="column-side">
+        <aside id="info-box" class="info-table-wrapper">
+          <div class="avatar"><a href="#/{{user}}"><img src="{{#avatar}}{{avatar}}{{/avatar}}{{^avatar}}images/avatar_default.png{{/avatar}}"></a></div>
+          <h4>
+            <a class="owner" href="#/{{user}}">{{user}}</a>&nbsp;/ <a class="dataset" href="edit/#/{{id}}">{{name}}</a>
+          </h4>
+          <div class="ich_tmpl">
+            <table xmlns="http://www.w3.org/1999/xhtml">
+              <tbody>
+                {{#forkedFrom}}
+                  <tr>
+                    <td>
+                      <span class="fork icon"></span>
+                      Fork of
+                    </td>
+                    <td>
+                      <a href="#/{{forkedFromUser}}">{{forkedFromUser}}</a>&nbsp;/ <a class="dataset" href="/edit/#/{{forkedFrom}}">{{name}}</a>
+                    </td>
+                  </tr>
+                {{/forkedFrom}}
+                {{#description}}
+                  <tr>
+                    <td>
+                      Description
+                    </td>
+                    <td>
+                      {{description}}
+                    </td>
+                  </tr>
+                {{/description}}
+                <tr>
+                  <td>
+                    Created
+                  </td>
+                  <td>
+                    <span class="timeago" title="{{date}}"></span>
+                  </td>
+                </tr>
+                {{#count}}
+                   <tr>
+                    <td>
+                      Documents
+                    </td>
+                    <td>
+                      {{count}}
+                    </td>
+                  </tr>
+                {{/count}}
+                {{#size}}
+                   <tr>
+                    <td>
+                      Size
+                    </td>
+                    <td>
+                      {{size}}
+                    </td>
+                  </tr>
+                {{/size}}
+              </tbody>
+            </table>
+          </div>
+        </aside>
+      </div>
+    {{/datasets}}
   </script>
   
   <script type="text/mustache" class="recentDatasetsTemplate">
