--- a/attachments/pages/index.html
+++ b/attachments/pages/index.html
@@ -9,11 +9,11 @@
   <link rel='stylesheet' media='all' href='style/common.css' />
   <link rel='stylesheet' media='all' href='style/home.css' />
   <link rel="stylesheet" href="style/bootstrap.css">
-  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/chrome-frame/1/CFInstall.min.js"></script>
+  <!-- <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/chrome-frame/1/CFInstall.min.js"></script>
   <script type="text/javascript">
     // google chrome frame
     CFInstall.check({mode: "overlay", destination: "http://datacouch.com"});
-  </script>
+  </script> -->
   <script type='text/javascript' src='script/deps-min.js'></script>
   <script type='text/javascript' src='script/lib/jquery.oauthpopup.js'></script>
   <script type='text/javascript' src='script/util.js'></script>
