--- a/attachments/pages/recline.html
+++ b/attachments/pages/recline.html
@@ -12,9 +12,9 @@
   <link rel="stylesheet" href="/style/codemirror.css">
   <link rel="stylesheet" href="/style/codemirror-default.css">
   
-  <script src="/proxy/wiki/socket.io/socket.io.js"></script>  
+  <!-- <script src="/proxy/wiki/socket.io/socket.io.js"></script>  
   <script src="/proxy/wiki/share/share.js"></script>  
-  <script src="/proxy/wiki/share/textarea.js"></script>  
+  <script src="/proxy/wiki/share/textarea.js"></script>   -->
   <script type="text/javascript" src="/script/deps-min.js"></script>  
   <script type="text/javascript" src="/script/util.js"></script>
   <script type="text/javascript" src="/script/costco.js"></script>
@@ -152,7 +152,7 @@
       <ul class="ui-tabs-nav ui-helper-reset ui-helper-clearfix ui-widget-header">
         <li class="ui-state-default ui-corner-top"><a data-tab="data" href="javascript:{}">Data</a></li>
         <li class="ui-state-default ui-corner-top"><a data-tab="apps" href="javascript:{}">Applications</a></li>
-        <li class="ui-state-default ui-corner-top"><a data-tab="wiki" href="javascript:{}">Wiki</a></li>
+        <!-- <li class="ui-state-default ui-corner-top"><a data-tab="wiki" href="javascript:{}">Wiki</a></li> -->        
       </ul>
     </div>
     <div class="sidebar">
