--- a/attachments/pages/index.html
+++ b/attachments/pages/index.html
@@ -15,6 +15,7 @@
     // google chrome frame
     CFInstall.check({mode: "overlay", destination: "http://datacouch.com"});
   </script> -->
+  <script type='text/javascript' src='socket.io/socket.io.js'></script>
   <script type='text/javascript' src='script/deps-min.js'></script>
   <script type='text/javascript' src='script/lib/jquery.oauthpopup.js'></script>
   <script type='text/javascript' src='script/util.js'></script>
